<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/profilebkg"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/blood_bank_ic_launcher_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="Why Should You Donate Blood?"
            android:textSize="20dp"
            android:paddingTop="8dp" />
        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/info_"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/teal_200"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/eligibility_"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/male_"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/female_"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
