<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebkg"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="189dp"
            android:layout_height="173dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="40dp"

            android:src="@drawable/logo1" />


        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/input_fullName"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@drawable/sign"
                android:hint="@string/displayName"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="Sex:" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:entries="@array/gender">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="Blood Group:" />

            <Spinner
                android:layout_marginLeft="13dp"
                android:id="@+id/inputBloodGroup"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Blood_Group">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="Contact No:" />
            <EditText
                android:layout_marginLeft="20dp"
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sign"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="Address:" />
            <EditText
                android:layout_marginLeft="40dp"
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sign"
                android:hint="@string/userAddress"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="Division:" />

            <Spinner
                android:layout_marginLeft="42dp"
                android:id="@+id/inputDivision"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/division_list">
            </Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sign"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/input_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign"
            android:layout_marginTop="12dp"
            android:hint="@string/eligibility_"
            android:inputType="number"
            android:textColor="@android:color/black" />


        <CheckBox
            android:id="@+id/checkbox"
            android:text="Mark this to be a donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/signin_btn"
            android:text="BOOK SLOT"
            android:textAllCaps="false"
            android:textColor="@color/blood_bank_ic_launcher_background" />

    </LinearLayout>

</ScrollView>